--- a/HTML/seasons.html
+++ b/HTML/seasons.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="/CSS/season.css"> 
+    <link rel="stylesheet" href="../CSS/season.css"> 
     <title> Anime Browser </title>
 </head>
 <body>
@@ -52,6 +52,6 @@
     </main>
 
 </body>
-<script src="/JS/renderLogic.js"> </script>
-<script src="/JS/seasons.js"> </script>
+<script src="../JS/renderLogic.js"> </script>
+<script src="../JS/seasons.js"> </script>
 </html>
