--- a/HTML/studios.html
+++ b/HTML/studios.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="/CSS/studios.css"> 
+    <link rel="stylesheet" href="../CSS/studios.css"> 
     <title> Anime Browser </title>
 </head>
 <body>
@@ -57,6 +57,6 @@
 
 
 </body>
-<script src="/JS/renderLogic.js"> </script>
-<script src="/JS/studios.js"> </script>
+<script src="../JS/renderLogic.js"> </script>
+<script src="../JS/studios.js"> </script>
 </html>
