--- a/HTML/tags.html
+++ b/HTML/tags.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="/CSS/tags.css"> 
+    <link rel="stylesheet" href="../CSS/tags.css"> 
     <title> Anime Browser </title>
 </head>
 <body>
@@ -122,6 +122,6 @@
 
 
 </body>
-<script src="/JS/renderLogic.js"> </script>
-<script src="/JS/tags.js"> </script>
+<script src="../JS/renderLogic.js"> </script>
+<script src="../JS/tags.js"> </script>
 </html>
